Modernize base bean code (#391)
* Also update coderabbit with more instructions